# Social-Network-Analysis

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
SNAEx1/: SNAEx1NoahSchager.ipynb
SNAEx2/: SNAEx2.ipynb
SNAEx3/: SNAEx3.ipynb
SNAEx3/graphs/: five_circle_testgraph.adjlist  testgraph.adjlist
SNAEx4/: SNAEx4.ipynb
SNAEx5/: SNAEx5.ipynb
SNAEx6/: SNAEx6.ipynb
