[project]
name = "social-network-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
]
